# kaggle_archive

./: .gitignore  README.md
commonlit_readability_prize/: README.md  pyproject.toml
commonlit_readability_prize/data/models/roberta-base/: dataset-metadata.json
commonlit_readability_prize/docs/: AboutFineTuning.md  CompetitionOverview.md  OtherReadabilityScores.md  PastCompetition.md  PublicNotebooks.md  modelArch.dio
commonlit_readability_prize/notebook/: RoBERTa_Classification.ipynb  RoBERta_MeanPool_Head_Training.ipynb  Stack.ipynb  XLM.ipynb  submission.ipynb
commonlit_readability_prize/src/: config.py  dataset.py  submission.py  train copy.py
commonlit_readability_prize/src/utils/: train_function.py
commonlit_readability_prize/tests/: conftest.py
g_research_crypto_forecasting/: .gitignore  Makefile  README.md  pyproject.toml
g_research_crypto_forecasting/docs/: Started.md
g_research_crypto_forecasting/notebook/: EDA_trainTestSplit.ipynb  tmp.ipynb  v01000_FirstBaseline.ipynb  v01001_AddTAFeatures.ipynb
g_research_crypto_forecasting/src/: create_feature.py  evaluation.py  split.py  store.py  submission.py  train.py
riiid_answer_correctness_prediction/: .env.example  .gitignore  Makefile  README.md  build_env.sh  install.sh  pyproject.toml
riiid_answer_correctness_prediction/archive/v01000/_src/: 01_convert_format.py  02_transfrom.py  03_split.py  04_train.py  05_evaluation.py
riiid_answer_correctness_prediction/archive/v01000/_src/query/: eval_dataset.sql  latest_train_features.sql  train_dataset.sql  (+3 more)
riiid_answer_correctness_prediction/archive/v02000/: 03_split.py  lda.py
riiid_answer_correctness_prediction/archive/v02000/src/: 01_preprocessing.py  02_transform.py  03_split.py  04_create_feature.py  05_train.py  06_evaluation.py  07_stack.py  08_submission.py  func.py
riiid_answer_correctness_prediction/data/06_evaluation/: cv_score.csv
riiid_answer_correctness_prediction/docs/: commands.md  dsb2019_research.md  solution.md
riiid_answer_correctness_prediction/experiments/transformer/: main.py
riiid_answer_correctness_prediction/saint_plus/: config.py  dataset.py  predict.py  train.py
riiid_answer_correctness_prediction/src/: 01_split.py  02_create_dataset.py  03_train.py  04_evaluation.py  05_submission.py  model.py  saint.py  saint_model_with_torch.py
riiid_answer_correctness_prediction/src/utils/: metric.py
riiid_answer_correctness_prediction/src/utils/trainer/: base.py
(+228 files in other folders)
