[tool.poetry]
name = "commonlit_readability_prize"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.7"
nltk = "^3.6.2"
torch = "^1.8.1"
numpy = "^1.20.2"
pandas = "^1.2.4"
joblib = "^1.0.1"
textstat = "^0.7.0"
tokenization = "^1.0.7"
transformers = "^4.5.1"
pandas-profiling = "^2.12.0"
ipywidgets = "^7.6.3"
rich = "^10.1.0"
plotly = "^4.14.3"
pandarallel = "^1.5.2"
seaborn = "^0.11.1"
pytorch-lightning = "^1.3.1"
pytorch-warmup = "^0.0.4"
omegaconf = "^2.0.6"
sentencepiece = "^0.1.95"
torchinfo = "^1.4.4"
hydra-core = "^1.0.6"
kaggle = "^1.5.12"
xgboost = "^1.4.2"
scikit-learn = "0.24.1"
gensim = "^4.0.1"
click = "^8.0.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
jupyterlab = "^3.0.14"
black = "^21.5b0"
pycodestyle = "^2.7.0"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
