[tool.poetry]
name = "g-research-crypto-forecasting"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
numpy = "^1.22.0"
pandas = "^1.3.5"
plotly = "^5.5.0"
matplotlib = "^3.5.1"
lightgbm = "^3.3.1"
xgboost = "^1.5.1"
jupyterlab = "^3.2.6"
jupyterlab-vim = "^0.14.5"
jupyterlab-vimrc = "^0.5.2"
ta = "^0.9.0"
mplfinance = "^0.12.8-beta.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
tqdm = "^4.62.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
