[tool.poetry]
name = "riiid_answer_correctness_prediction"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"
numpy = "^1.19.4"
kaggle = "^1.5.9"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
scikit-learn = "^0.23.2"
lightgbm = "2.3.1"
xgboost = "1.2.0"
torch = "^1.7.1"
torchvision = "^0.8.2"
black = "^20.8b1"
google-cloud-storage = "^1.35.0"
google-cloud-bigquery = "^2.6.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.9"
black = "^20.8b1"
pycodestyle = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
